# Sparky

./: .gitignore  CMakeLists.txt
Dependencies/: CMakeLists.txt
Dependencies/Box2D/: CMakeLists.txt
Dependencies/FreeImage/: CMakeLists.txt
Dependencies/FreeType/: CMakeLists.txt
Dependencies/FreeType/freetype-gl/: common.h
Dependencies/glfw-3.1.2/: CMakeLists.txt  cmake_uninstall.cmake
Dependencies/glfw-3.1.2/docs/: Doxyfile
Dependencies/glfw-3.1.2/examples/: boing  gears  heightmap  particles  simple  splitview  wave
Dependencies/glfw-3.1.2/include/GLFW/: glfw3.h
Dependencies/glfw-3.1.2/src/: libglfw.so.3.1
Dependencies/glfw-3.1.2/tests/: clipboard  cursor  empty  events  gamma  glfwinfo  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  title  windows
Dependencies/gorilla-audio/: CMakeLists.txt
Dependencies/gorilla-audio/src/common/: gc_common.h
Dependencies/libogg/: CMakeLists.txt
Dependencies/libvorbis/: CMakeLists.txt
Dependencies/libvorbis/include/vorbis/: codec.h
Dependencies/libvorbis/lib/: envelope.c
Sandbox/: CMakeLists.txt  Sandbox
Sandbox/shaders/: AdvancedLighting.shader  Skybox.shader
Sandbox/src/: Sandbox.cpp
Sparky-core/: .cproject  .project  CMakeLists.txt  Sparky-core.vcxproj
Sparky-core/src/: Sparky.h
Sparky-core/src/sp/: String.h
Sparky-core/src/sp/app/: Input.h  Window.cpp  Window.h
Sparky-core/src/sp/audio/: Sound.h
Sparky-core/src/sp/debug/: DebugMenu.cpp  DebugMenuAction.h
Sparky-core/src/sp/graphics/: Light.h  Material.h  Renderer.cpp
Sparky-core/src/sp/graphics/API/: BufferLayout.cpp  BufferLayout.h  Context.cpp  Context.h  Framebuffer2D.cpp  FramebufferDepth.cpp  IndexBuffer.cpp  Texture2D.cpp  TextureCube.cpp  TextureDepth.cpp  VertexArray.cpp  VertexBuffer.cpp
Sparky-core/src/sp/graphics/shaders/: Shader.cpp  ShaderFactory.cpp
Sparky-core/src/sp/graphics/ui/: Panel.cpp
Sparky-core/src/sp/platform/opengl/: GLCommon.h  GLContext.cpp  GLShader.cpp  GLShader.h
Sparky-core/src/sp/platform/opengl/shaders/: BatchRenderer.shader
Sparky-core/src/sp/platform/posix/: PosixApplication.cpp  PosixFileSystem.cpp  PosixInput.cpp  PosixLog.cpp  PosixMemoryManager.cpp  PosixWindow.cpp
Sparky-core/src/sp/system/: Allocator.cpp  Memory.cpp  Memory.h
Sparky-core/src/sp/utils/: Log.h
